added seo files

--- a/index.html
+++ b/index.html
@@ -3,93 +3,75 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechMathan Blog - React Native & Full Stack Tutorials</title>
+
+    <!-- Primary Meta Tags -->
+    <title>TechMathan Blog - React Native & Tech Tutorials</title>
+    <meta
+      name="title"
+      content="TechMathan Blog — React Native & Dev Tutorials"
+    />
     <meta
       name="description"
-      content="TechMathan.blog offers high-quality tutorials and insights on React Native, JavaScript, and full-stack development for passionate developers."
+      content="Explore modern web & mobile development tips, React Native tutorials, and coding guides at TechMathan.blog. Stay updated and inspired."
     />
     <meta
       name="keywords"
-      content="Tech blog, React Native, JavaScript, Full Stack, App Development, Programming, Mobile, Developer Blog"
+      content="Tech blog, React, React Native, JavaScript, TypeScript, Full Stack, App Development, Programming, Mobile,Android, iOs, Developer Blog"
     />
     <meta name="author" content="Mathan" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://techmathan.blog/" />
+    <meta
+      property="og:title"
+      content="TechMathan Blog — React Native & Dev Tutorials"
+    />
+    <meta
+      property="og:description"
+      content="Explore modern web & mobile development tips, React Native tutorials, and coding guides at TechMathan.blog. Stay updated and inspired."
+    />
+    <meta
+      property="og:image"
+      content="https://techmathan.blog/images/hero-image.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://techmathan.blog/" />
+    <meta
+      name="twitter:title"
+      content="TechMathan Blog — React Native & Dev Tutorials"
+    />
+    <meta
+      name="twitter:description"
+      content="Explore modern web & mobile development tips, React Native tutorials, and coding guides at TechMathan.blog. Stay updated and inspired."
+    />
+    <meta
+      name="twitter:image"
+      content="https://techmathan.blog/images/hero-image.png"
+    />
+
+    <!-- Links -->
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="TechMathan RSS"
+      href="rss.xml"
+    />
+    <link rel="icon" type="image/png" href="images/logo.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        font-family: "Outfit", sans-serif;
-        background-color: #0d1117;
-        color: #e6e6e6;
-        display: flex;
-        flex-direction: column;
-        min-height: 100vh;
-      }
-
-      .container {
-        max-width: 1000px;
-        margin: 4rem auto;
-        padding: 2rem;
-        background-color: #161b22;
-        border-radius: 16px;
-        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
-      }
-
-      h1 {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-        color: #00bcd4;
-      }
-
-      p {
-        font-size: 1.15rem;
-        line-height: 1.8;
-        margin-top: 1rem;
-      }
-
-      .illustration {
-        text-align: center;
-        margin-bottom: 2rem;
-      }
-
-      .illustration img {
-        max-width: 100%;
-        width: 360px;
-        border-radius: 12px;
-        filter: drop-shadow(0 0 20px rgba(0, 188, 212, 0.2));
-      }
-
-      footer {
-        text-align: center;
-        padding: 2rem 1rem;
-        font-size: 0.9rem;
-        color: #8c8c8c;
-      }
-
-      @media (max-width: 600px) {
-        h1 {
-          font-size: 2.2rem;
-        }
-
-        p {
-          font-size: 1rem;
-        }
-
-        .illustration img {
-          width: 90%;
-        }
-      }
-    </style>
+    <link href="css/index.css" rel="stylesheet" />
   </head>
   <body>
     <div class="container">
       <div class="illustration">
         <img
           src="./images/hero-image.png"
-          alt="Bald Guy with Beard Illustration"
+          alt="Thinking bald guy coding with laptop, coffee and notebook Illustration"
         />
       </div>
 
