added adsense code snippet

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
       rel="stylesheet"
     />
     <link href="css/index.css" rel="stylesheet" />
+
+    <!-- Scripts -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3889820655180934"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="container">
