added adsense meta tag

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       name="twitter:image"
       content="https://techmathan.blog/images/hero-image.png"
     />
+    <meta name="google-adsense-account" content="ca-pub-3889820655180934" />
 
     <!-- Links -->
     <link
